changed footer, fixed navbar

--- a/index.html
+++ b/index.html
@@ -73,14 +73,17 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="focus-welfare">Welfare e diritti</a></li>
-                                <li><a href="#">Page 1-2</a></li>
-                                <li><a href="#">Page 1-3</a></li>
-                                <li><a href="#">Page 1-4</a></li>
-                                <li><a href="#">Page 1-5</a></li>
-                                <li><a href="#">Page 1-6</a></li>
-                                <li><a href="#">Page 1-7</a></li> 
+                                <li><a href="">Fisco e finanza</a></li>
+                                <li><a href="#">Lavoro e reddito</a></li>
+                                <li><a href="#">Cultura e conoscenza</a></li>
+                                <li><a href="#">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./welfare.html">Welfare e diritti</a></li>
+                                <li><a href="#">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="#">Altraeconomia</a></li> 
                             </ul>
+                    <li>
+                        <a href="./infografiche.html">Infografiche</a>
+                    </li>
                     </li>
           <!--
           <li>
@@ -96,10 +99,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
-          <a href="#" target="_blank">Sbilanciamoci.org 
-          <!--
-          <!--<img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" />
-          --></a>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
         </li>
         </ul>
         </div>
@@ -183,7 +183,7 @@
 <hr>
 <footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">La Contromanovra</span>, un progetto di<a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> Sbilanciamoci.org</a>, è distribuito con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">La Contromanovra</span> è un progetto di<a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubito con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
 
