--- a/index.html
+++ b/index.html
@@ -108,21 +108,23 @@
   </nav>
 
     <div id="intro" class="container">
-            <div class="slogan">
-            <h1>Rapporto Sbilanciamoci 2016</h1>
-            <h3>Come usare la spesa pubblica per i diritti, la pace e l'ambiente</h3>
+            <br><br>
+            <div class="slogan col-md-6 column">
+            <h1>Rapporto 2016</h1>
+            <h3>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</h3>
+            </div>
+            <div class="slogan col-md-6 column">
             </div>
     </div>
     <div id="main" class="container">
         <div class="jumbotron">
-            <div class="page-header"><h1>La controfinanziaria</h1></div><br>
+            <div class="page-header">
             <p class="lead">Dal 2001, durante la discussione alle Camere della Legge Finanziaria (oggi legge di stabilità), la campagna Sbilanciamoci! pubblica il suo rapporto annuale “Come usare la spesa pubblica per i diritti, la pace e l’ambiente” . Il rapporto del 2013, 186 pagine di proposte, analisi, soluzioni e idee concrete per uscire dalla crisi salvaguardando i diritti – oltre ad analizzare criticamente le politiche del governo italiano, dell’Unione e della Commissione europea – formula ben 94 proposte specifiche e dettagliate (in una “contro-manovra” da 29 miliardi di euro) per le entrate e per le uscite, ma anche per le riduzioni della spesa pubblica (dalle spese militari alle “grandi opere”).</p>
             <div id="scaricatab">
                 <span class="fa-stack">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1>
                 <h2>Scarica il rapporto 2016</h2>
-                <br>
             </div>
         </div>
     </div>
@@ -159,16 +161,18 @@
     <br>
     <div id="approfondimenti" class="row"><!-- inserendo qui la classe 'row' la pagina diventa più larga del 100% -->
             <br>
-            <div class="col-md-6 column"><h1>
-                <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h1>
-                <h2>Dati e grafici</h2>
+            <div class="col-md-6 column">
+                <h2>
+                <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i></span></h2>
+                <h2>Infografiche</h2>
             </div>
-            <div class="col-md-6 column"><h1>
-                <span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h1>
+            <div class="col-md-6 column">
+                <h2><span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h2>
                 <h2>Il contesto</h2>
                 <br>
             </div>
     </div>
+    <!--
     <div id="scarica" class="container">
         <br>
         <div class="col-md-12 column"><h1>
@@ -178,12 +182,13 @@
         </div>
     </div>
     <br>
+    -->
 </div>		
 
 <hr>
 <footer>
  <p class="text-center" >
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">La Contromanovra</span> è un progetto di<a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubito con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Il Rapporto <i>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</i> è un progetto di</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://sbilanciamoci.org" property="cc:attributionName" rel="cc:attributionURL"> <img src="http://www.sbilanciamoci.org/images/logo.gif" style="height: 25px;" /></a>. Questo sito è stato realizzato e donato da <a href="http://ondata.it" target><img src="./img/logo_onData.png" style="height: 15px;" /></a>. <br>I contenuti sono distrubiti con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
 </p>
 </footer>
 
