--- a/index.html
+++ b/index.html
@@ -130,31 +130,31 @@
     </div>
     <div id="macrocategorie" class="container">
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg finanza">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e finanza</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg welfare">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-home fa-stack-1x fa-inverse"></i></span>Welfare e diritti</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg lavoro">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-wrench fa-stack-1x fa-inverse"></i></span>Lavoro e reddito</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg cooperazione">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-pagelines fa-stack-1x fa-inverse"></i></span>Cooperazione, pace, disarmo</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg" href="/focus-welfare.html">
+                <a class="btn btn-default btn-lg cultura" href="/focus-welfare.html">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-book fa-stack-1x fa-inverse"></i></span>Cultura e conoscenza</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg altra">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-lightbulb-o fa-stack-1x fa-inverse"></i></span>Altraeconomia</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg ambiente">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-leaf fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</a>
             </div>
     </div>
