--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
                 <a class="btn btn-default btn-lg ambiente">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-leaf fa-stack-1x fa-inverse"></i></span>Ambiente e sviluppo sostenibile</a>
             </div>
+            <div class="col-md-6 column">
+                <a class="btn btn-default btn-lg tutto">
+                <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-book fa-stack-1x fa-inverse"></i></span>Tutte le proposte</a>
+            </div>
     </div>
     <br>
     <div id="approfondimenti" class="row"><!-- inserendo qui la classe 'row' la pagina diventa più larga del 100% -->
