--- a/welfare.html
+++ b/welfare.html
@@ -56,7 +56,7 @@
   <script src="./js/dist/exhibit-api.js?locale=it"></script>
   <script type="text/javascript">
   var tableStyler = function(table, database) {
-    $(table).addClass("table table-condensed table-striped");
+    $(table).addClass("table table-condensed table-striped-welfare");
   };
   </script>
 
