impostata larghezza fissa del tooltip

--- a/welfare.html
+++ b/welfare.html
@@ -151,7 +151,7 @@
                 <table class="table" ex:class-content=".territorio">
                   <tr>
                     <td><span ex:content=".Sottocategoria"></span></td>
-                    <td><a href="javascript:void(0);" ex:onclick-subcontent="Tip('<strong>Descrizione: </strong>{{.Descrizione}}')" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td><!-- Il tooltip compare al click non al mouseover -->
+                    <td><a href="javascript:void(0);" ex:onclick-subcontent="Tip('<strong>Descrizione: </strong>{{.Descrizione}}',WIDTH, 400)" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td><!-- Il tooltip compare al click non al mouseover -->
                     <td><span ex:content=".Entrate"></span></td>
                     <td><span ex:content=".Spese"></span></td>
                   </tr>
