--- a/welfare.html
+++ b/welfare.html
@@ -116,7 +116,7 @@
       <div class="jumbotron">
         <br>
         <div class="page-header"><h1>
-          <span class="fa-stack fa-4x">
+          <span class="fa-stack fa-4x welfare">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-users fa-stack-1x fa-inverse"></i>
           </span> 
