--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-euro fa-stack-1x fa-inverse"></i></span>Fisco e finanza</a>
             </div>
             <div class="col-md-6 column">
-                <a class="btn btn-default btn-lg welfare">
+                <a class="btn btn-default btn-lg welfare" href="./welfare.html">
                 <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-home fa-stack-1x fa-inverse"></i></span>Welfare e diritti</a>
             </div>
             <div class="col-md-6 column">
