--- a/welfare.html
+++ b/welfare.html
@@ -150,7 +150,7 @@
               <div class="table-responsive">
                 <table class="table" ex:class-content=".territorio">
                   <tr>
-                    <td><span ex:content=".Sottocategoria"></span></td>
+                    <td><strong><em><span ex:content=".Sottocategoria"></span></em></strong></td>
                     <td><a href="javascript:void(0);" ex:onclick-subcontent="Tip('<div class=\'tip-welfare\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', WIDTH, 400,BGCOLOR,'',BORDERWIDTH,0)" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td><!-- Il tooltip compare al click non al mouseover -->
                     <td><span ex:content=".Entrate"></span></td>
                     <td><span ex:content=".Spese"></span></td>
