--- a/welfare.html
+++ b/welfare.html
@@ -151,7 +151,13 @@
                 <table class="table" ex:class-content=".territorio">
                   <tr>
                     <td><strong><em><span ex:content=".Sottocategoria"></span></em></strong></td>
-                    <td><a href="javascript:void(0);" ex:onclick-subcontent="Tip('<div class=\'tip-welfare\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', WIDTH, 400,BGCOLOR,'',BORDERWIDTH,0)" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td><!-- Il tooltip compare al click non al mouseover -->
+                    <!-- <td><a href="javascript:void(0);" ex:onclick-subcontent="Tip('<div class=\'tip-welfare\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', WIDTH, 400,BGCOLOR,'',BORDERWIDTH,0)" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td> -->
+                    <td>
+                      <!-- Shows tip if Descrizione exists -->
+                      <a ex:if-exists=".Descrizione" href="javascript:void(0);" ex:onclick-subcontent="Tip('<div class=\'tip-welfare\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', WIDTH, 400,BGCOLOR,'',BORDERWIDTH,0)" onmouseout="UnTip()"><span ex:content=".label"></span></a>
+                      <!-- only if Descrizione not exists -->
+                      <span ex:content="if(exists(.Descrizione), '',  .label)"></span>
+                    </td>
                     <td><span ex:content=".Entrate"></span></td>
                     <td><span ex:content=".Spese"></span></td>
                   </tr>
