--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
             <div class="page-header">
             <p class="lead">Dal 2001, durante la discussione alle Camere della Legge Finanziaria (oggi legge di stabilità), la campagna Sbilanciamoci! pubblica il suo rapporto annuale “Come usare la spesa pubblica per i diritti, la pace e l’ambiente” . Il rapporto del 2013, 186 pagine di proposte, analisi, soluzioni e idee concrete per uscire dalla crisi salvaguardando i diritti – oltre ad analizzare criticamente le politiche del governo italiano, dell’Unione e della Commissione europea – formula ben 94 proposte specifiche e dettagliate (in una “contro-manovra” da 29 miliardi di euro) per le entrate e per le uscite, ma anche per le riduzioni della spesa pubblica (dalle spese militari alle “grandi opere”).</p>
             <div id="scaricatab">
-                <span class="fa-stack">
+                <!-- <span class="fa-stack">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1>
-                <h2>Scarica il rapporto 2016</h2>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <a href="#"><img src="./images/sbilanciamoci_home.png"></a>
+                <a href="#"><h2 style="color:black;">Scarica il rapporto 2016</h2></a>
             </div>
         </div>
     </div>
@@ -159,7 +160,7 @@
             </div>
             <div class="col-md-6 column">
                 <a class="btn btn-default btn-lg tutto">
-                <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-book fa-stack-1x fa-inverse"></i></span>Tutte le proposte</a>
+                <span class="fa-stack fa-fw"><i class="fa fa-circle fa-lg text-primary"></i><i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span>Tutte le proposte</a>
             </div>
     </div>
     <br>
@@ -171,8 +172,10 @@
                 <h2>Infografiche</h2>
             </div>
             <div class="col-md-6 column">
-                <h2><span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h2>
-                <h2>Il contesto</h2>
+                <p>Il Rapporto <strong>Sbilanciamoci!</strong> 2016 è stato realizzato grazie al sostegno della</p>
+                <a href="http://www.ottopermillevaldese.org/otto_per_mille_valdese.php" border="0" target="_blank"><img src="./images/8xmille_ri-bozza_home.png"></a>
+                <!-- <h2><span class="fa-stack"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-search fa-stack-1x fa-inverse"></i></span></h2>
+                <h2>Il contesto</h2> -->
                 <br>
             </div>
     </div>
