--- a/fisco_finanza.html
+++ b/fisco_finanza.html
@@ -3,7 +3,7 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Welfare e diritti</title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Fisco e finanza</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata">
@@ -51,12 +51,12 @@
 
   <link rel="exhibit/data" 
   type="application/jsonp"
-  href="https://spreadsheets.google.com/feeds/cells/18R5dMkVBRzjVj1m_OkdGzaHwKJt7mzvT53PoqwrYiB4/o1a1xae/public/basic?alt=json-in-script"
+  href="https://spreadsheets.google.com/feeds/cells/18R5dMkVBRzjVj1m_OkdGzaHwKJt7mzvT53PoqwrYiB4/om5ut2i/public/basic?alt=json-in-script"
   ex:converter="googleSpreadsheets" />
   <script src="./js/dist/exhibit-api.js?locale=it"></script>
   <script type="text/javascript">
   var tableStyler = function(table, database) {
-    $(table).addClass("table table-condensed table-striped-welfare");
+    $(table).addClass("table table-condensed table-striped-finanza");
   };
   </script>
 
@@ -84,7 +84,7 @@
             <a href="./">Home</a>
           </li>
           <li class="active">
-            <a href="./focus-welfare.html" >Welfare e diritti</a>
+            <a href="./focus-welfare.html" >Fisco e finanza</a>
           </li>
           <!--
           <li>
@@ -116,11 +116,11 @@
       <div class="jumbotron">
         <br>
         <div class="page-header"><h1>
-          <span class="fa-stack fa-4x welfare">
+          <span class="fa-stack fa-4x finanza">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-euro fa-stack-1x fa-inverse"></i>
           </span> 
-          Welfare e diritti</h1></div><br>
+          Fisco e finanza</h1></div><br>
           <p class="lead">I <strong>diritti socialis non sono un lusso né una merce</strong>. Per contrastare le scelte di privatizzazione in corso da tempo, Sbilanciamoci! propone di integrare il Fondo Nazionale Politiche Sociali (1,164 miliardi) per riportarlo ai livelli del 2008, impiegare le risorse stanziate per il bonus bebè per ridurre le rette degli asili nido pubblici (costo zero), integrare il Fondo per la non autosufficienza (<mark>350 milioni</mark>) e quello per l’infanzia (<mark>15,2 milioni</mark>), varare misure per l’invecchiamento attivo (1 milione) e per l’inclusione attiva delle persone con disabilità (<mark>50 milioni</mark>). L’inserimento sociale dei detenuti potrebbe avvenire a costo zero.
             La sanità pubblica va difesa: per ridurre i ticket sanitari e rafforzare la medicina territoriale servirebbe 1 miliardo recuperabile rivedendo le convenzioni con le strutture sanitarie private. 
             Per promuovere le politiche di genere sono fondamentali provvedimenti come l’assegno di maternità universale (900 milioni), incentivi nei settori della formazione tecnico-scientifica delle donne (<mark>275,1 milioni</mark>) e, visto il pericoloso aumento della violenza sulle donne, un finanziamento per nuovi centri antiviolenza (<mark>50 milioni</mark>). 
