--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
                         <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="">Fisco e finanza</a></li>
-                                <li><a href="#">Lavoro e reddito</a></li>
-                                <li><a href="#">Cultura e conoscenza</a></li>
-                                <li><a href="#">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
+                                <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
+                                <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
+                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
                                 <li><a href="./welfare.html">Welfare e diritti</a></li>
-                                <li><a href="#">Cooperazione, pace, disarmo</a></li>
-                                <li><a href="#">Altraeconomia</a></li> 
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./altra_economia.html">Altraeconomia</a></li> 
                             </ul>
                     <li>
                         <a href="./infografiche.html">Infografiche</a>
