--- a/welfare.html
+++ b/welfare.html
@@ -79,30 +79,27 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="container">
-          <ul class="nav navbar-nav">
-           <li >
-            <a href="./">Home</a>
-          </li>
-          <li class="active">
-            <a href="./focus-welfare.html" >Welfare e diritti</a>
-          </li>
-          <!--
-          <li>
-            <a href="./proponi.html">Proponi</a>
-          </li>
-          <li>
-            <a href="./griglia.html">Griglia</a>
-          </li>
-          <li>
-            <a href="./open.html">Open</a>
-          </li>
+          <ul class="nav navbar-nav dropdown">
+                    <li >
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
+                                <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
+                                <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
+                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li class="active"><a href="./welfare.html">Welfare e diritti</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./altra_economia.html">Altraeconomia</a></li> 
+                            </ul>
+                    <li>
+                        <a href="./infografiche.html">Infografiche</a>
+                    </li>
+                    </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-         <li>
-          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org</a>
-        </li>
-      -->
-    </ul>
   </div>
 </div>
 
